--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -348,6 +348,10 @@ WBP_1PlayerNormalVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.C
 EdGraphNode=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 Set Image Badges_53=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_1PlayerTimedEasyTemplate1_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_1PlayerTimedMedium_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_1PlayerTimedHard_C=
+WBP_1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_Endgame1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -355,6 +359,11 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -380,48 +389,41 @@ RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1
 OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1
 OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
-MRUItem1=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
-MRUItem2=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
-MRUItem3=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
-MRUItem4=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
-MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
-MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest
-MRUItem7=/Game/UI/Main_Menu
-MRUItem8=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
-MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem11=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem12=/Game/DataBetweenLevels
-MRUItem13=/Game/UI/Settings_Menu
-MRUItem14=/Game/ArraySizes
-MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem16=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem17=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem18=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem19=/Game/CardGM
-MRUItem20=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem21=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem22=/Game/UI/Gameplay_Screen_1_Player
-MRUItem23=/Game/Cards/Card
-MRUItem24=/Game/CardManager
-MRUItem25=/Game/CardPlayer
-MRUItem26=/Game/Interact
-MRUItem27=/Game/PlayerControllerCard
-MRUItem28=/Game/Cards/Bat
-MRUItem29=/Game/Cards/Bee
+MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium
+MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard
+MRUItem2=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
+MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard
+MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard
+MRUItem6=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard
+MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem8=/Game/UI/Main_Menu
+MRUItem9=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium
+MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem11=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
+MRUItem12=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
+MRUItem13=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
+MRUItem14=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
+MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem16=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem17=/Game/DataBetweenLevels
+MRUItem18=/Game/UI/Settings_Menu
+MRUItem19=/Game/ArraySizes
+MRUItem20=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem21=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem22=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem23=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem24=/Game/CardGM
+MRUItem25=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem26=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem27=/Game/UI/Gameplay_Screen_1_Player
+MRUItem28=/Game/Cards/Card
+MRUItem29=/Game/CardManager
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -747,7 +749,7 @@ Image.Localization=True
 Image.Events=True
 TextBlock.Layout=True
 TextBlock.Content=True
-TextBlock.Appearance=True
+TextBlock.Appearance=False
 TextBlock.Accessibility=True
 TextBlock.Performance=True
 TextBlock.Wrapping=True
@@ -2013,6 +2015,117 @@ WBP_Endgame1PlayerTimedEasy1_C.Localization=True
 WBP_Endgame1PlayerTimedEasy1_C.Accessibility=True
 WBP_Endgame1PlayerTimedEasy1_C.Rendering=True
 WBP_Endgame1PlayerTimedEasy1_C.Navigation=True
+WBP_1PlayerTimedMedium_C.Images to Guess=True
+WBP_1PlayerTimedMedium_C.Option Buttons=True
+WBP_1PlayerTimedMedium_C.Game Setup=True
+WBP_1PlayerTimedMedium_C.Image Cards=True
+WBP_1PlayerTimedMedium_C.Clue Setup=True
+WBP_1PlayerTimedMedium_C.Point Setup=True
+WBP_1PlayerTimedMedium_C.Tries Setup=True
+WBP_1PlayerTimedMedium_C.Input=True
+WBP_1PlayerTimedMedium_C.Default=True
+WBP_1PlayerTimedMedium_C.Appearance=True
+WBP_1PlayerTimedMedium_C.Interaction=True
+WBP_1PlayerTimedMedium_C.Designer=True
+WBP_1PlayerTimedMedium_C.Performance=True
+WBP_1PlayerTimedMedium_C.Layout=True
+WBP_1PlayerTimedMedium_C.Behavior=True
+WBP_1PlayerTimedMedium_C.Render Transform=True
+WBP_1PlayerTimedMedium_C.Localization=True
+WBP_1PlayerTimedMedium_C.Accessibility=True
+WBP_1PlayerTimedMedium_C.Rendering=True
+WBP_1PlayerTimedMedium_C.Navigation=True
+WBP_Endgame1PlayerTimedMedium_C.Option Buttons=True
+WBP_Endgame1PlayerTimedMedium_C.Input=True
+WBP_Endgame1PlayerTimedMedium_C.End Game Setup=True
+WBP_Endgame1PlayerTimedMedium_C.End Game Messages=True
+WBP_Endgame1PlayerTimedMedium_C.Default=True
+WBP_Endgame1PlayerTimedMedium_C.Game Setup=True
+WBP_Endgame1PlayerTimedMedium_C.Appearance=True
+WBP_Endgame1PlayerTimedMedium_C.Interaction=True
+WBP_Endgame1PlayerTimedMedium_C.Designer=True
+WBP_Endgame1PlayerTimedMedium_C.Performance=True
+WBP_Endgame1PlayerTimedMedium_C.Layout=True
+WBP_Endgame1PlayerTimedMedium_C.Behavior=True
+WBP_Endgame1PlayerTimedMedium_C.Render Transform=True
+WBP_Endgame1PlayerTimedMedium_C.Localization=True
+WBP_Endgame1PlayerTimedMedium_C.Accessibility=True
+WBP_Endgame1PlayerTimedMedium_C.Rendering=True
+WBP_Endgame1PlayerTimedMedium_C.Navigation=True
+WBP_1PlayerTimedHard_C.Images to Guess=True
+WBP_1PlayerTimedHard_C.Option Buttons=True
+WBP_1PlayerTimedHard_C.Game Setup=True
+WBP_1PlayerTimedHard_C.Image Cards=True
+WBP_1PlayerTimedHard_C.Clue Setup=True
+WBP_1PlayerTimedHard_C.Point Setup=True
+WBP_1PlayerTimedHard_C.Tries Setup=True
+WBP_1PlayerTimedHard_C.Input=True
+WBP_1PlayerTimedHard_C.Default=True
+WBP_1PlayerTimedHard_C.Appearance=True
+WBP_1PlayerTimedHard_C.Interaction=True
+WBP_1PlayerTimedHard_C.Designer=True
+WBP_1PlayerTimedHard_C.Performance=True
+WBP_1PlayerTimedHard_C.Layout=True
+WBP_1PlayerTimedHard_C.Behavior=True
+WBP_1PlayerTimedHard_C.Render Transform=True
+WBP_1PlayerTimedHard_C.Localization=True
+WBP_1PlayerTimedHard_C.Accessibility=True
+WBP_1PlayerTimedHard_C.Rendering=True
+WBP_1PlayerTimedHard_C.Navigation=True
+WBP_Endgame1PlayerTimedHard_C.Option Buttons=True
+WBP_Endgame1PlayerTimedHard_C.Input=True
+WBP_Endgame1PlayerTimedHard_C.End Game Setup=True
+WBP_Endgame1PlayerTimedHard_C.End Game Messages=True
+WBP_Endgame1PlayerTimedHard_C.Default=True
+WBP_Endgame1PlayerTimedHard_C.Game Setup=True
+WBP_Endgame1PlayerTimedHard_C.Appearance=True
+WBP_Endgame1PlayerTimedHard_C.Interaction=True
+WBP_Endgame1PlayerTimedHard_C.Designer=True
+WBP_Endgame1PlayerTimedHard_C.Performance=True
+WBP_Endgame1PlayerTimedHard_C.Layout=True
+WBP_Endgame1PlayerTimedHard_C.Behavior=True
+WBP_Endgame1PlayerTimedHard_C.Render Transform=True
+WBP_Endgame1PlayerTimedHard_C.Localization=True
+WBP_Endgame1PlayerTimedHard_C.Accessibility=True
+WBP_Endgame1PlayerTimedHard_C.Rendering=True
+WBP_Endgame1PlayerTimedHard_C.Navigation=True
+WBP_1PlayerTimedVeryHard_C.Images to Guess=True
+WBP_1PlayerTimedVeryHard_C.Option Buttons=True
+WBP_1PlayerTimedVeryHard_C.Game Setup=True
+WBP_1PlayerTimedVeryHard_C.Image Cards=True
+WBP_1PlayerTimedVeryHard_C.Clue Setup=True
+WBP_1PlayerTimedVeryHard_C.Point Setup=True
+WBP_1PlayerTimedVeryHard_C.Tries Setup=True
+WBP_1PlayerTimedVeryHard_C.Input=True
+WBP_1PlayerTimedVeryHard_C.Default=True
+WBP_1PlayerTimedVeryHard_C.Appearance=True
+WBP_1PlayerTimedVeryHard_C.Interaction=True
+WBP_1PlayerTimedVeryHard_C.Designer=True
+WBP_1PlayerTimedVeryHard_C.Performance=True
+WBP_1PlayerTimedVeryHard_C.Layout=True
+WBP_1PlayerTimedVeryHard_C.Behavior=True
+WBP_1PlayerTimedVeryHard_C.Render Transform=True
+WBP_1PlayerTimedVeryHard_C.Localization=True
+WBP_1PlayerTimedVeryHard_C.Accessibility=True
+WBP_1PlayerTimedVeryHard_C.Rendering=True
+WBP_1PlayerTimedVeryHard_C.Navigation=True
+WBP_Endgame1PlayerTimedVeryHard_C.Option Buttons=True
+WBP_Endgame1PlayerTimedVeryHard_C.Input=True
+WBP_Endgame1PlayerTimedVeryHard_C.End Game Setup=True
+WBP_Endgame1PlayerTimedVeryHard_C.End Game Messages=True
+WBP_Endgame1PlayerTimedVeryHard_C.Default=True
+WBP_Endgame1PlayerTimedVeryHard_C.Game Setup=True
+WBP_Endgame1PlayerTimedVeryHard_C.Appearance=True
+WBP_Endgame1PlayerTimedVeryHard_C.Interaction=True
+WBP_Endgame1PlayerTimedVeryHard_C.Designer=True
+WBP_Endgame1PlayerTimedVeryHard_C.Performance=True
+WBP_Endgame1PlayerTimedVeryHard_C.Layout=True
+WBP_Endgame1PlayerTimedVeryHard_C.Behavior=True
+WBP_Endgame1PlayerTimedVeryHard_C.Render Transform=True
+WBP_Endgame1PlayerTimedVeryHard_C.Localization=True
+WBP_Endgame1PlayerTimedVeryHard_C.Accessibility=True
+WBP_Endgame1PlayerTimedVeryHard_C.Rendering=True
+WBP_Endgame1PlayerTimedVeryHard_C.Navigation=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -2101,8 +2214,8 @@ Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2110,7 +2223,7 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -2360,8 +2473,14 @@ VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
 WBP_1PlayerNormalVeryHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EndgameNormalVeryHard_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_1PlayerTimedEasyTemplate1_C="\"Object\" "
+WBP_1PlayerTimedEasyTemplate1_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Endgame1PlayerTimedEasy1_C="\"Object\" "
+WBP_1PlayerTimedMedium_C="\"Object\" "
+WBP_Endgame1PlayerTimedMedium_C="\"Object\" "
+WBP_1PlayerTimedHard_C="\"Object\" "
+WBP_Endgame1PlayerTimedHard_C="\"Object\" "
+WBP_1PlayerTimedVeryHard_C="\"Object\" "
+WBP_Endgame1PlayerTimedVeryHard_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2435,9 +2554,15 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard.WBP_1PlayerNormalVeryHard=0
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard=0
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_EasyTimedTest.WBP_EasyTimedTest=0
-/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1=1
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1=0
 /Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard.WBP_EndgameNormalVeryHard=0
-/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1=1
+/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1=0
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium.WBP_1PlayerTimedMedium=1
+/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium.WBP_Endgame1PlayerTimedMedium=1
+/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard.WBP_Endgame1PlayerTimedHard=1
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard.WBP_1PlayerTimedHard=1
+/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard.WBP_Endgame1PlayerTimedVeryHard=1
+/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard.WBP_1PlayerTimedVeryHard=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
