--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=1920,Y=0)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -132,7 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=992
-MultipleInstancePositions=(X=1920,Y=0)
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -187,24 +187,24 @@ K2Node_EnhancedInputAction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Co
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 Settings_Menu_C=
 Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 Set audio Badges=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-WBP_ImageCard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_ImageCard_C=
 WBP_EndGame_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_Easy_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_CallFunction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_FunctionEntry=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+K2Node_CallFunction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+K2Node_FunctionEntry=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 Set Image Badges=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_MacroInstance=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_Variable=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_FunctionResult=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_FunctionResult=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 ClickableComponent_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Card_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-EdGraph=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+EdGraph=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 SceneComponent=
 LandscapeStreamingProxy=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Actor=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
@@ -352,6 +352,8 @@ WBP_1PlayerTimedMedium_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Coll
 WBP_1PlayerTimedHard_C=
 WBP_1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_Endgame1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_MemoryGame_2Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+K2Node_Tunnel=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -359,6 +361,7 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -388,42 +391,41 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1.WBP_1PlayerTimedEasyTemplate1
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1.WBP_Endgame1PlayerTimedEasy1
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player.WBP_MemoryGame_2Player
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard
-MRUItem2=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
-MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
-MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard
-MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard
-MRUItem6=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard
-MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem8=/Game/UI/Main_Menu
-MRUItem9=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium
-MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
-MRUItem11=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
-MRUItem12=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
-MRUItem13=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
-MRUItem14=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
-MRUItem15=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem16=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem17=/Game/DataBetweenLevels
-MRUItem18=/Game/UI/Settings_Menu
-MRUItem19=/Game/ArraySizes
-MRUItem20=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem21=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem22=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem23=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem24=/Game/CardGM
-MRUItem25=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem26=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem27=/Game/UI/Gameplay_Screen_1_Player
-MRUItem28=/Game/Cards/Card
-MRUItem29=/Game/CardManager
+MRUItem0=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player
+MRUItem2=/Game/UI/Main_Menu
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium
+MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard
+MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
+MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
+MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard
+MRUItem8=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard
+MRUItem9=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard
+MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem11=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium
+MRUItem12=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem13=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
+MRUItem14=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
+MRUItem15=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
+MRUItem16=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
+MRUItem17=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem18=/Game/DataBetweenLevels
+MRUItem19=/Game/UI/Settings_Menu
+MRUItem20=/Game/ArraySizes
+MRUItem21=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem22=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem23=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem24=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem25=/Game/CardGM
+MRUItem26=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem27=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem28=/Game/UI/Gameplay_Screen_1_Player
+MRUItem29=/Game/Cards/Card
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -894,7 +896,7 @@ WBP_Easy_C.Navigation=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
-EdGraph.Graph=False
+EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
 WBP_ImageCard_C.Setup=True
@@ -2126,6 +2128,26 @@ WBP_Endgame1PlayerTimedVeryHard_C.Localization=True
 WBP_Endgame1PlayerTimedVeryHard_C.Accessibility=True
 WBP_Endgame1PlayerTimedVeryHard_C.Rendering=True
 WBP_Endgame1PlayerTimedVeryHard_C.Navigation=True
+WBP_MemoryGame_2Player_C.Images to Guess=True
+WBP_MemoryGame_2Player_C.Option Buttons=True
+WBP_MemoryGame_2Player_C.Game Setup=True
+WBP_MemoryGame_2Player_C.Image Cards=True
+WBP_MemoryGame_2Player_C.Clue Setup=True
+WBP_MemoryGame_2Player_C.Point Setup=True
+WBP_MemoryGame_2Player_C.Tries Setup=True
+WBP_MemoryGame_2Player_C.Input=True
+WBP_MemoryGame_2Player_C.Default=True
+WBP_MemoryGame_2Player_C.Appearance=True
+WBP_MemoryGame_2Player_C.Interaction=True
+WBP_MemoryGame_2Player_C.Designer=True
+WBP_MemoryGame_2Player_C.Performance=True
+WBP_MemoryGame_2Player_C.Layout=True
+WBP_MemoryGame_2Player_C.Behavior=True
+WBP_MemoryGame_2Player_C.Render Transform=True
+WBP_MemoryGame_2Player_C.Localization=True
+WBP_MemoryGame_2Player_C.Accessibility=True
+WBP_MemoryGame_2Player_C.Rendering=True
+WBP_MemoryGame_2Player_C.Navigation=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -2140,7 +2162,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/MemoryGame/Images/Animals-deck
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2160,7 +2182,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2228,12 +2250,12 @@ VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-Main_Menu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Main_Menu_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" \"Object.Comment.CommentColor\" "
 EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Easy_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_ImageCard_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_ImageCard_C="\"Object\" "
 Border="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AudioTextBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EndGame_C="\"Object\" "
@@ -2481,6 +2503,7 @@ WBP_1PlayerTimedHard_C="\"Object\" "
 WBP_Endgame1PlayerTimedHard_C="\"Object\" "
 WBP_1PlayerTimedVeryHard_C="\"Object\" "
 WBP_Endgame1PlayerTimedVeryHard_C="\"Object\" "
+WBP_MemoryGame_2Player_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2518,7 +2541,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/UI/Game_Mode_Data/Difficulty.Difficulty=0
 /Game/UI/Game_Mode_Data/Card_Pack.Card_Pack=1
 /Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy=0
-/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=1
+/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=0
 /Game/MemoryGame/Blueprints/Setup/WBP_OptionButton.WBP_OptionButton=1
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndGame.WBP_EndGame=0
 /Game/UI/Clock_WB.Clock_WB=1
@@ -2563,6 +2586,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard.WBP_1PlayerTimedHard=1
 /Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard.WBP_Endgame1PlayerTimedVeryHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard.WBP_1PlayerTimedVeryHard=1
+/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player.WBP_MemoryGame_2Player=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
