Tutorial Screen Complete

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -177,7 +177,7 @@ bRealtimeMaterialViewport=False
 [DetailCustomWidgetExpansion]
 CardPlayer_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 SkeletalMeshComponent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-PropertyWrapper=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
+PropertyWrapper=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 Blueprint=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Interact.Interact
 InputAction=
@@ -354,6 +354,7 @@ WBP_1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Co
 WBP_Endgame1PlayerTimedVeryHard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_MemoryGame_2Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 K2Node_Tunnel=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+Tutorial_Screen_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -361,6 +362,7 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -390,42 +392,40 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player.WBP_MemoryGame_2Player
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard
+OpenAssetsAtExit=/Game/UI/Tutorial_Screen.Tutorial_Screen
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player
-MRUItem2=/Game/UI/Main_Menu
-MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium
-MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard
-MRUItem5=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
-MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
-MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard
-MRUItem8=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard
-MRUItem9=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard
-MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem11=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium
-MRUItem12=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
-MRUItem13=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
-MRUItem14=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
-MRUItem15=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
-MRUItem16=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
-MRUItem17=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem18=/Game/DataBetweenLevels
-MRUItem19=/Game/UI/Settings_Menu
-MRUItem20=/Game/ArraySizes
-MRUItem21=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem22=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem23=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem24=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem25=/Game/CardGM
-MRUItem26=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem27=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem28=/Game/UI/Gameplay_Screen_1_Player
-MRUItem29=/Game/Cards/Card
+MRUItem0=/Game/UI/Tutorial_Screen
+MRUItem1=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player
+MRUItem3=/Game/UI/Main_Menu
+MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedMedium
+MRUItem5=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedHard
+MRUItem6=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedEasy1
+MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedEasyTemplate1
+MRUItem8=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard
+MRUItem9=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard
+MRUItem10=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedHard
+MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem12=/Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedMedium
+MRUItem13=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalVeryHard
+MRUItem14=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalVeryHard
+MRUItem15=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_EndgameNormalHard
+MRUItem16=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalMedium1
+MRUItem17=/Game/MemoryGame/Blueprints/EndGame/Normal_end_games/WBP_Endgame1PlayerNormalEasy
+MRUItem18=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem19=/Game/DataBetweenLevels
+MRUItem20=/Game/UI/Settings_Menu
+MRUItem21=/Game/ArraySizes
+MRUItem22=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem23=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem24=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem25=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem26=/Game/CardGM
+MRUItem27=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem28=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem29=/Game/UI/Gameplay_Screen_1_Player
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -751,7 +751,7 @@ Image.Localization=True
 Image.Events=True
 TextBlock.Layout=True
 TextBlock.Content=True
-TextBlock.Appearance=False
+TextBlock.Appearance=True
 TextBlock.Accessibility=True
 TextBlock.Performance=True
 TextBlock.Wrapping=True
@@ -2182,7 +2182,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/UI_Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2235,12 +2235,12 @@ Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2504,6 +2504,7 @@ WBP_Endgame1PlayerTimedHard_C="\"Object\" "
 WBP_1PlayerTimedVeryHard_C="\"Object\" "
 WBP_Endgame1PlayerTimedVeryHard_C="\"Object\" "
 WBP_MemoryGame_2Player_C="\"Object\" "
+Tutorial_Screen_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2587,6 +2588,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/EndGame/Timed_End_Games/WBP_Endgame1PlayerTimedVeryHard.WBP_Endgame1PlayerTimedVeryHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Timed_Modes/WBP_1PlayerTimedVeryHard.WBP_1PlayerTimedVeryHard=1
 /Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame_2Player.WBP_MemoryGame_2Player=0
+/Game/UI/Tutorial_Screen.Tutorial_Screen=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3909,8 +3911,8 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -4016,6 +4018,7 @@ UserDefinedEnum.Enumerators=False
 CardGM_C.Tick=False
 GameMapsSettings.DefaultModes=True
 GameMapsSettings.DefaultMaps=True
+TextBlock.Appearance=True
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
