Image added to 2 player along with win condition

--- a/CardGame/CardGame.uproject
+++ b/CardGame/CardGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{A50FAD58-438D-650A-0875-2EBDCC28E752}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
