endless not working

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -360,7 +360,7 @@ Tutorial_Screen_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.C
 WBP_MemoryGame_2PlayerTemplate_C=
 WorldPartitionHLOD=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 LandscapeMeshProxyComponent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-WBP_EndlessTest_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number,K2Node_FunctionEntry.Inputs.F06C57E5462743C1DAAEE8AD8BCCC207
+WBP_EndlessTest_C=
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -398,12 +398,13 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Endless_modes/WBP_EndlessTest
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem2=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem3=/Game/UI/Main_Menu
+MRUItem1=/Game/UI/Main_Menu
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem3=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
 MRUItem4=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
 MRUItem5=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/WBP_MemoryGame_2PlayerTemplate
 MRUItem6=/Game/MemoryGame/Images/Shapes-Deck/Card__Kite_
@@ -2284,7 +2285,7 @@ ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Maps
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailPropertyExpansion]
 CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
@@ -2704,8 +2705,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
