--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -389,8 +389,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/UI/Settings_Menu.Settings_Menu
-OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/MemoryGame/Images/Ogham-Deck/Ogham_Card__Z_
@@ -700,6 +698,7 @@ WorldSettings.Tick=True
 WorldSettings.Networking=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -2275,7 +2274,6 @@ Settings_Menu_C.Default=True
 Settings_Menu_C.Volume=True
 WBP_MemoryGame_C.Default=True
 WBP_MemoryGame_C.Events=True
-Texture2D.Interchange =True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -2290,7 +2288,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2355,10 +2353,10 @@ ContentBrowserDrawer.JumpMRU=/All/EngineData
 ContentBrowserDrawer.JumpMRU=/All/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes
 ContentBrowserDrawer.JumpMRU=/All/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck
 ContentBrowserDrawer.JumpMRU=/All/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/2Player_modes
-ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Audio
-ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
-ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_Assets
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/HDRI
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Audio
+ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_Assets
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Maps
 
 [MessageLog]
@@ -2370,7 +2368,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -4225,8 +4223,8 @@ Fab.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Engines/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Engines/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
