--- a/CardGame/Config/DefaultGame.ini
+++ b/CardGame/Config/DefaultGame.ini
@@ -2,7 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=248CBBFF41F55EA22523B59AA2EC77CD
+ProjectName=Péirí Pairs
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
